--- a/wishes-project/src/Components/SearchBar/SearchBar.css
+++ b/wishes-project/src/Components/SearchBar/SearchBar.css
@@ -1,3 +1,9 @@
+.searchbar-body {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 .search-bar-container {
   display: flex;
   height: 1.5em;
@@ -5,4 +11,59 @@
 
 .clear-button {
   cursor: pointer;
+}
+
+.search-bar {
+  margin-left: 2em;
+  margin-right: 1em;
+  width: 30%;
+}
+
+.load-more-button {
+  width: 30%;
+  align-self: center;
+}
+
+/* clearbutton */
+.button-59 {
+  align-items: center;
+  background-color: #fff;
+  border: 2px solid #000;
+  box-sizing: border-box;
+  color: #000;
+  cursor: pointer;
+  display: inline-flex;
+  fill: #000;
+  font-family: Inter, sans-serif;
+  font-size: 15px;
+  font-weight: 600;
+  height: 35px;
+  justify-content: center;
+  letter-spacing: -0.8px;
+  line-height: 24px;
+  min-width: 10px;
+  outline: 0;
+  padding: 0 17px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 0.3s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-59:focus {
+  color: #171e29;
+}
+
+.button-59:hover {
+  border-color: #06f;
+  color: #06f;
+  fill: #06f;
+}
+
+.button-59:active {
+  border-color: #06f;
+  color: #06f;
+  fill: #06f;
 }
