--- a/wishes-project/src/Components/WishLibrary/WishLibrary.css
+++ b/wishes-project/src/Components/WishLibrary/WishLibrary.css
@@ -3,19 +3,22 @@
   height: 100%;
 }
 .wish-library li {
-  font-size: 0.5em;
+  font-size: 0.8em;
   width: 85%;
 }
 .wish-library ul {
+  margin-top: 1em;
   width: 100%;
-  margin: 0 auto;
   z-index: 10;
 }
 .wish-library h1 {
   text-align: center;
-  font-size: 1em;
+  font-size: 1.3em;
+  margin-bottom: 2em;
 }
 .wish-library {
+  padding-bottom: 300px;
+
   z-index: 1;
   position: fixed;
   top: 0;
@@ -26,7 +29,7 @@
   overflow-y: scroll;
   overflow-x: hidden;
 
-  background: url(https://images.pexels.com/photos/114979/pexels-photo-114979.jpeg);
+  background: url(https://img.freepik.com/free-vector/japanese-wave-line-art-landscape-background-abstract-mountain-banner-design-pattern-vector-illustration-geometric-poster_90220-715.jpg?w=1380&t=st%3D1658224713~exp%3D1658225313~hmac%3D75f3656f5cd711dbb2a3da197cc5e94c2367e420e78bf233a985f06fa0c4d908&fbclid=IwAR1w7pZ93EPwnvC-jX6KErRv5BIoAbfkAgKS6CeXIUv3vgusFhQPedc1gx0);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center center;
@@ -58,4 +61,94 @@
 .searchbar-container {
   display: flex;
   gap: 0.5em;
+}
+/* back button*/
+
+.button-35 {
+  position: absolute;
+  top: 0.5em;
+  right: 0.5em;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 12px;
+  box-shadow: transparent 0 0 0 3px, rgba(18, 18, 18, 0.1) 0 6px 20px;
+  box-sizing: border-box;
+  color: #121212;
+  cursor: pointer;
+  display: inline-flex;
+  flex: 1 1 auto;
+  font-family: Inter, sans-serif;
+  font-size: 1.2rem;
+  font-weight: 700;
+  justify-content: center;
+  line-height: 1;
+  margin: 0;
+  outline: none;
+  padding: 0.6rem 1rem;
+  text-align: center;
+  text-decoration: none;
+  transition: box-shadow 0.2s, -webkit-box-shadow 0.2s;
+  white-space: nowrap;
+  border: 0;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-35:hover {
+  box-shadow: #121212 0 0 0 3px, transparent 0 0 0 0;
+}
+/*libraray button*/
+.button-50 {
+  position: absolute;
+  top: 2em;
+  left: 1em;
+  appearance: button;
+  background-color: #000;
+  background-image: none;
+  border: 1px solid #000;
+  border-radius: 4px;
+  box-shadow: #fff 4px 4px 0 0, #000 4px 4px 0 1px;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: ITCAvantGardeStd-Bk, Arial, sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  margin: 0 5px 10px 0;
+  overflow: visible;
+  padding: 12px 40px;
+  text-align: center;
+  text-transform: none;
+  touch-action: manipulation;
+  user-select: none;
+  -webkit-user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+}
+
+.button-50:focus {
+  text-decoration: none;
+}
+
+.button-50:hover {
+  text-decoration: none;
+}
+
+.button-50:active {
+  box-shadow: rgba(0, 0, 0, 0.125) 0 3px 5px inset;
+  outline: 0;
+}
+
+.button-50:not([disabled]):active {
+  box-shadow: #fff 2px 2px 0 0, #000 2px 2px 0 1px;
+  transform: translate(2px, 2px);
+}
+
+@media (min-width: 768px) {
+  .button-50 {
+    padding: 12px 50px;
+  }
 }
