--- a/wishes-project/src/Components/Styles/App.css
+++ b/wishes-project/src/Components/Styles/App.css
@@ -28,3 +28,55 @@ body {
 .github-logo:hover {
   opacity: 0.8;
 }
+
+.favorite {
+  color: red;
+}
+.myWish {
+  position: relative;
+  transition: all 0.3s;
+
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.myWish.container {
+}
+
+.star {
+  position: absolute;
+  top: -1em;
+  right: -1em;
+  border: none;
+  background-color: rgb(255, 255, 255);
+  cursor: pointer;
+}
+
+.star:hover {
+  background-color: rgb(255, 255, 0);
+}
+.lib {
+  top: 0;
+  right: -2em;
+}
+.full {
+  background-color: rgb(255, 255, 0);
+}
+
+.wish-item {
+  position: relative;
+}
+.wish-text {
+  font-style: italic;
+}
+
+.select {
+  cursor: pointer;
+  position: absolute;
+  height: 35px;
+  left: 70%;
+  min-width: 45px;
+}
