--- a/wishes-project/src/Components/WishLibrary/WishLibrary.css
+++ b/wishes-project/src/Components/WishLibrary/WishLibrary.css
@@ -4,12 +4,15 @@
 }
 .wish-library li {
   font-size: 0.8em;
-  width: 85%;
 }
 .wish-library ul {
+  margin-left: 2%;
+  margin-right: 7%;
+  display: flex;
+  flex-direction: column;
   margin-top: 1em;
-  width: 100%;
   z-index: 10;
+  gap: 0.5em;
 }
 .wish-library h1 {
   text-align: center;
