--- a/wishes-project/src/Components/Styles/App.css
+++ b/wishes-project/src/Components/Styles/App.css
@@ -10,14 +10,17 @@ body {
   min-height: 100vh;
   align-items: center;
   justify-content: center;
-  background: url(https://img.freepik.com/free-vector/japanese-wave-line-art-landscape-background-abstract-mountain-banner-design-pattern-vector-illustration-geometric-poster_90220-715.jpg?w=1380&t=st%3D1658224713~exp%3D1658225313~hmac%3D75f3656f5cd711dbb2a3da197cc5e94c2367e420e78bf233a985f06fa0c4d908&fbclid=IwAR1w7pZ93EPwnvC-jX6KErRv5BIoAbfkAgKS6CeXIUv3vgusFhQPedc1gx0);
+  background-color: #8ec5fc;
+  background-image: linear-gradient(62deg, #8ec5fc 0%, #e0c3fc 100%);
+
+  /*   background: url(https://img.freepik.com/free-vector/japanese-wave-line-art-landscape-background-abstract-mountain-banner-design-pattern-vector-illustration-geometric-poster_90220-715.jpg?w=1380&t=st%3D1658224713~exp%3D1658225313~hmac%3D75f3656f5cd711dbb2a3da197cc5e94c2367e420e78bf233a985f06fa0c4d908&fbclid=IwAR1w7pZ93EPwnvC-jX6KErRv5BIoAbfkAgKS6CeXIUv3vgusFhQPedc1gx0);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
+  background-size: cover; */
 }
 .github-logo {
   position: absolute;
