--- a/wishes-project/src/Components/SearchBar/SearchBar.css
+++ b/wishes-project/src/Components/SearchBar/SearchBar.css
@@ -5,6 +5,8 @@
   justify-content: center;
 }
 .search-bar-container {
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
   display: flex;
   height: 1.5em;
 }
@@ -14,7 +16,7 @@
 }
 
 .search-bar {
-  margin-left: 2em;
+  margin-left: 2rem;
   margin-right: 1em;
   width: 30%;
 }
@@ -26,6 +28,8 @@
 
 /* clearbutton */
 .button-59 {
+  margin-left: 1em;
+  margin-right: 1em;
   align-items: center;
   background-color: #fff;
   border: 2px solid #000;
@@ -35,9 +39,8 @@
   display: inline-flex;
   fill: #000;
   font-family: Inter, sans-serif;
-  font-size: 15px;
+  font-size: 16px;
   font-weight: 600;
-  height: 35px;
   justify-content: center;
   letter-spacing: -0.8px;
   line-height: 24px;
