--- a/wishes-project/src/Components/Styles/App.css
+++ b/wishes-project/src/Components/Styles/App.css
@@ -51,11 +51,12 @@ body {
 
 .star {
   position: absolute;
-  top: -1em;
+  top: -1.3em;
   right: -1em;
   border: none;
   background-color: rgb(255, 255, 255);
   cursor: pointer;
+  border-radius: 20%;
 }
 
 .star:hover {
@@ -78,8 +79,5 @@ body {
 
 .select {
   cursor: pointer;
-  position: absolute;
-  height: 35px;
-  left: 70%;
   min-width: 45px;
 }
