--- a/wishes-project/src/Components/WishLibrary/WishLibrary.css
+++ b/wishes-project/src/Components/WishLibrary/WishLibrary.css
@@ -15,13 +15,12 @@
   gap: 0.5em;
 }
 .wish-library h1 {
-  margin-left: 3rem;
+  margin-left: -3.5rem;
   font-size: 2.5rem;
-  margin-bottom: 2em;
+  display: inline-block;
+  align-self: flex-end;
 }
 .wish-library {
-  padding-bottom: 300px;
-
   z-index: 1;
   position: fixed;
   top: -300px;
@@ -48,6 +47,9 @@
   background-size: cover; */
 }
 /*main button to trigger the library*/
+.library-header {
+  display: flex;
+}
 .wish-library-button {
   cursor: pointer;
   position: fixed;
@@ -79,7 +81,7 @@
   right: 2em;
   align-items: center;
   background-color: black;
-  border-radius: 12px;
+  border-radius: 5px;
   box-shadow: transparent 0 0 0 3px, rgba(18, 18, 18, 0.1) 0 6px 20px;
   box-sizing: border-box;
   color: white;
@@ -87,12 +89,12 @@
   display: inline-flex;
   flex: 1 1 auto;
   font-family: Inter, sans-serif;
-  font-size: 1.2rem;
+  font-size: 1rem;
   justify-content: center;
   line-height: 1;
   margin: 0;
   outline: none;
-  padding: 0.6rem 1rem;
+  padding: 0.7rem 1.1rem;
   text-align: center;
   text-decoration: none;
   transition: box-shadow 0.2s, -webkit-box-shadow 0.2s;
@@ -156,4 +158,9 @@
   .button-50 {
     padding: 12px 50px;
   }
+}
+
+.book-icon {
+  width: 12rem;
+  display: inline-block;
 }
