--- a/wishes-project/src/Components/Styles/App.css
+++ b/wishes-project/src/Components/Styles/App.css
@@ -1,13 +1,16 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:600&display=swap");
 html {
   overflow-x: hidden;
+  max-width: 100vw;
 }
 body {
+  overflow-x: hidden;
   font-size: 1.5em;
   margin: 0;
   padding: 0;
   display: flex;
   min-height: 100vh;
+  max-width: 100vw;
   align-items: center;
   justify-content: center;
   background-color: #8ec5fc;
@@ -52,8 +55,8 @@ body {
 .star {
   display: flex;
   position: absolute;
-  top: -1.3em;
-  right: -1em;
+  top: -1rem;
+  right: 0;
   border: none;
   background-color: transparent;
   cursor: pointer;
@@ -69,7 +72,7 @@ body {
 }
 .lib {
   top: 0;
-  right: -2em;
+  right: -1rem;
 }
 .full {
   color: black;
